Set brm to not print iterations

--- a/analysis/E3_alignment.Rmd
+++ b/analysis/E3_alignment.Rmd
@@ -139,7 +139,7 @@ nested_3way <- brm(value ~ Musician + scramble + level + (1|sub), data = data_ne
                      set_prior('normal(-0.2, 0.1)', coef = 'level1'),
                      set_prior('normal(-0.1, 0.1)', coef = c('level2', 'level4')) 
                    ),
-                   save_pars = save_pars(all = TRUE), iter = 5000,
+                   save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                    file = 'models/E3_alignment_3way_noInt')
 ```
 
@@ -163,7 +163,7 @@ nested_noMus <- brm(value ~ scramble + level + (1|sub), data = data_nested,
                      set_prior('normal(-0.2, 0.1)', coef = 'level1'),
                      set_prior('normal(-0.1, 0.1)', coef = c('level2', 'level4')) 
                    ),
-                   save_pars = save_pars(all = TRUE), iter = 5000,
+                   save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                    file = 'models/E3_alignment_2way_noMus')
 
 nested_noScram <- brm(value ~ Musician + level + (1|sub), data = data_nested,
@@ -172,7 +172,7 @@ nested_noScram <- brm(value ~ Musician + level + (1|sub), data = data_nested,
                      set_prior('normal(-0.2, 0.1)', coef = 'level1'),
                      set_prior('normal(-0.1, 0.1)', coef = c('level2', 'level4')) 
                    ),
-                   save_pars = save_pars(all = TRUE), iter = 5000,
+                   save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                    file = 'models/E3_alignment_2way_noScram')
 
 nested_noLevel <- brm(value ~ Musician + scramble + (1|sub), data = data_nested,
@@ -182,7 +182,7 @@ nested_noLevel <- brm(value ~ Musician + scramble + (1|sub), data = data_nested,
                      set_prior('normal(-0.1, 0.1)', coef = 'scramble3'),
                      set_prior('normal(-0.1, 0.1)', coef = 'scramble4')
                    ),
-                   save_pars = save_pars(all = TRUE), iter = 5000,
+                   save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                    file = 'models/E3_alignment_2way_noLevel')
 ```
 
@@ -257,7 +257,8 @@ nested_justScram <- brm(value ~ scramble + (1|sub), data = data_nested,
                          set_prior('normal(-0.1, 0.1)', coef = 'scramble3'),
                          set_prior('normal(-0.1, 0.1)', coef = 'scramble4')
                        ),
-                       save_pars = save_pars(all = TRUE), iter = 5000,
+                       save_pars = save_pars(all = TRUE), 
+                       iter = 5000, refresh = 0,
                        file = 'models/E3_alignment_justScram')
 ```
 
@@ -280,7 +281,8 @@ nested_2way_levelScram <- brm(value ~ scramble + scramble:level + (1|sub), data 
                          set_prior('normal(-0.1, 0.1)', coef = 'scramble3'),
                          set_prior('normal(-0.1, 0.1)', coef = 'scramble4')
                        ),
-                       save_pars = save_pars(all = TRUE), iter = 5000,
+                       save_pars = save_pars(all = TRUE), 
+                       iter = 5000, refresh = 0,
                        file = 'models/E3_alignment_2way_levelScramInt')
 ```
 
@@ -307,8 +309,9 @@ nested_justLevel <- brm(value ~ level + (1|sub), data = data_nested,
                           set_prior('normal(-0.2, 0.1)', coef = 'level1'),
                           set_prior('normal(-0.1, 0.1)', coef = c('level2', 'level4'))
                         ),
-                        save_pars = save_pars(all = TRUE), iter = 5000,
-                       file = 'models/E3_alignment_justLevel')
+                        save_pars = save_pars(all = TRUE), 
+                        iter = 5000, refresh = 0,
+                        file = 'models/E3_alignment_justLevel')
 ```
 
 ```{r, include=FALSE}
@@ -323,7 +326,8 @@ nested_2way_musScram <- brm(value ~ scramble + scramble:Musician + (1|sub), data
                               set_prior('normal(-0.1, 0.1)', coef = 'scramble3'),
                               set_prior('normal(-0.1, 0.1)', coef = 'scramble4')
                             ),
-                            save_pars = save_pars(all = TRUE), iter = 5000,
+                            save_pars = save_pars(all = TRUE), 
+                            iter = 5000, refresh = 0,
                             file = 'models/E3_alignment_2way_musScramInt')
 nested_2way_musLevel <- brm(value ~ level + level:Musician + (1|sub), data = data_nested,
                             prior = c(
@@ -331,7 +335,8 @@ nested_2way_musLevel <- brm(value ~ level + level:Musician + (1|sub), data = dat
                               set_prior('normal(-0.2, 0.1)', coef = 'level1'),
                               set_prior('normal(-0.1, 0.1)', coef = c('level2', 'level4'))
                             ),
-                            save_pars = save_pars(all = TRUE), iter = 5000,
+                            save_pars = save_pars(all = TRUE), 
+                            iter = 5000, refresh = 0,
                             file = 'models/E3_alignment_2way_musLevelInt')
 ```
 
@@ -383,7 +388,8 @@ data1B <- filter(data, scramble == '1B')
 
 ```{r}
 levels1B_null <- brm(value ~ 1 + (1|sub), data = data1B,
-                     save_pars = save_pars(all = TRUE), iter = 5000,
+                     save_pars = save_pars(all = TRUE), 
+                     iter = 5000, refresh = 0,
                      file = 'models/E3_alignment_1B_null')
 ```
 
@@ -403,7 +409,7 @@ levels1B <- brm(value ~ level + (1|sub), data = data1B,
                   set_prior('normal(-0.2, 0.1)', coef = c('level1', 'level2', 'level3', 'level5')),
                   set_prior('normal(-0.1, 0.1)', coef = c('level4', 'level7'))
                 ),
-                save_pars = save_pars(all = TRUE), iter = 5000,
+                save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                 file = 'models/E3_alignment_1B')
 ```
 
@@ -443,7 +449,8 @@ data2B <- filter(data, scramble == '2B')
 
 ```{r}
 levels2B_null <- brm(value ~ 1 + (1|sub), data = data2B,
-                     save_pars = save_pars(all = TRUE), iter = 5000,
+                     save_pars = save_pars(all = TRUE), 
+                     iter = 5000, refresh = 0,
                      file = 'models/E3_alignment_2B_null')
 ```
 
@@ -459,7 +466,7 @@ levels2B <- brm(value ~ level + (1|sub), data = data2B,
                   set_prior('normal(-0.2, 0.1)', coef = c('level1', 'level2', 'level3', 'level5')),
                   set_prior('normal(-0.1, 0.1)', coef = c('level4', 'level7'))
                 ),
-                save_pars = save_pars(all = TRUE), iter = 5000,
+                save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                 file = 'models/E3_alignment_2B')
 ```
 
@@ -503,7 +510,7 @@ data8B <- filter(data, scramble == '8B')
 
 ```{r}
 levels8B_null <- brm(value ~ 1 + (1|sub), data = data8B,
-                     save_pars = save_pars(all = TRUE), iter = 5000,
+                     save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                      file = 'models/E3_alignment_8B_null')
 ```
 
@@ -519,7 +526,7 @@ levels8B <- brm(value ~ level + (1|sub), data = data8B,
                   set_prior('normal(-0.2, 0.1)', coef = c('level1', 'level2', 'level3', 'level5')),
                   set_prior('normal(-0.1, 0.1)', coef = c('level4', 'level7'))
                 ),
-                save_pars = save_pars(all = TRUE), iter = 5000,
+                save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                 file = 'models/E3_alignment_8B')
 ```
 
@@ -569,8 +576,9 @@ dataI <- filter(data, scramble == 'Intact')
 
 ```{r}
 levelsI_null <- brm(value ~ 1 + (1|sub), data = dataI,
-                     save_pars = save_pars(all = TRUE), iter = 5000,
-                     file = 'models/E3_alignment_Intact_null')
+                    save_pars = save_pars(all = TRUE), 
+                    iter = 5000, refresh = 0,
+                    file = 'models/E3_alignment_Intact_null')
 ```
 
 ```{r}
@@ -585,7 +593,7 @@ levelsI <- brm(value ~ level + (1|sub), data = dataI,
                   set_prior('normal(-0.2, 0.1)', coef = c('level1', 'level2', 'level3', 'level5')),
                   set_prior('normal(-0.1, 0.1)', coef = c('level4', 'level7'))
                 ),
-                save_pars = save_pars(all = TRUE), iter = 5000,
+                save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                 file = 'models/E3_alignment_Intact')
 ```
 
@@ -643,7 +651,7 @@ get_prior(value ~ scramble*level + (1|sub), data_longTS_M)
 ```{r}
 longTS_M <- brm(value ~ scramble + level + (1|sub), data = data_longTS_M,
                 prior = set_prior('normal(0, 0.1)', class = 'b'),
-                save_pars = save_pars(all = TRUE), iter = 5000,
+                save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                 file = 'models/E3_alignment_longTimescales_mus')
 ```
 
@@ -656,7 +664,7 @@ print(summary(longTS_M), digits = 4)
 ```{r}
 longTS_M_int <- brm(value ~ scramble*level + (1|sub), data = data_longTS_M,
                 prior = set_prior('normal(0, 0.1)', class = 'b'),
-                save_pars = save_pars(all = TRUE), iter = 5000,
+                save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                 file = 'models/E3_alignment_longTimescales_musInt')
 ```
 
@@ -677,7 +685,7 @@ There is weak evidence for an interaction for musicians.
 ```{r}
 longTS_NM <- brm(value ~ scramble + level + (1|sub), data = data_longTS_NM,
                 prior = set_prior('normal(0, 0.1)', class = 'b'),
-                save_pars = save_pars(all = TRUE), iter = 5000,
+                save_pars = save_pars(all = TRUE), iter = 5000, refresh = 0,
                 file = 'models/E3_alignment_longTimescales_nonmus')
 ```
 
@@ -689,9 +697,10 @@ print(summary(longTS_NM), digits = 4)
 
 ```{r}
 longTS_NM_int <- brm(value ~ scramble*level + (1|sub), data = data_longTS_NM,
-                prior = set_prior('normal(0, 0.1)', class = 'b'),
-                save_pars = save_pars(all = TRUE), iter = 5000,
-                file = 'models/E3_alignment_longTimescales_nonmusInt')
+                     prior = set_prior('normal(0, 0.1)', class = 'b'),
+                     save_pars = save_pars(all = TRUE), 
+                     iter = 5000, refresh = 0,
+                     file = 'models/E3_alignment_longTimescales_nonmusInt')
 ```
 
 ```{r}
