--- a/analysis/E2_prediction.Rmd
+++ b/analysis/E2_prediction.Rmd
@@ -29,7 +29,7 @@ set.seed(15000)
 ```
 
 ```{r}
-data <- read_csv('../data/E1-E2-E4/prediction.csv')
+data <- read_csv('../data/E1-E2-E4/prediction.csv', show_col_types = FALSE)
 ```
 
 Convert variables to factors.
