--- a/analysis/E3_alignment.Rmd
+++ b/analysis/E3_alignment.Rmd
@@ -67,6 +67,7 @@ data %<>% mutate(
 
 contrasts(data$scramble) <- contr.treatment(4) # Intact as reference
 contrasts(data$level) <- contr.treatment(7, base = 6) # 8-bar as reference
+contrasts(data$Musician) <- c(-1,1)
 ```
 
 ```{r}
@@ -78,6 +79,7 @@ data_nested %<>% mutate(
 
 contrasts(data_nested$scramble) <- contr.treatment(4) # Intact as reference
 contrasts(data_nested$level) <- contr.treatment(4, base = 3) # 8-bar as reference
+contrasts(data$Musician) <- c(-1,1)
 ```
 
 Check normality of the data.
