--- a/analysis/E2_prediction.Rmd
+++ b/analysis/E2_prediction.Rmd
@@ -247,7 +247,7 @@ ggplot() +
   ylim(0, 0.85) +
   xlab('Scramble Level') +
   ylab('Posterior Distribution of\nProportion Correct (Prediction)') +
-  scale_fill_discrete(name="", labels=c('Non-musicians', 'Musicians')) +
+  scale_fill_discrete(name="", labels=c('Musicians', 'Non-musicians')) +
   theme(legend.text = element_text(size = 12))
 
 ggsave('../figures/Fig2B_prediction.png', width = 7, height = 5)
