Reknit with medians

--- a/analysis/E1_memory.Rmd
+++ b/analysis/E1_memory.Rmd
@@ -118,7 +118,7 @@ plot(mus_scram)
 ```
 
 ```{r}
-print(summary(mus_scram), digits = 4)
+print(summary(mus_scram, robust = TRUE), digits = 4)
 ```
 
 ```{r}
@@ -170,7 +170,7 @@ plot(mus_only)
 ```
 
 ```{r}
-print(summary(mus_only), digits = 4)
+print(summary(mus_only, robust = TRUE), digits = 4)
 ```
 
 ```{r}
@@ -201,7 +201,7 @@ plot(mus_scram_int)
 ```
 
 ```{r}
-print(summary(mus_scram_int), digits = 4)
+print(summary(mus_scram_int, robust = TRUE), digits = 4)
 ```
 
 
@@ -293,7 +293,7 @@ years_mus_scram <- brm(accuracy ~ scramble + yrs_mus_exp + (1|exp_subject_id), d
 
 ```{r}
 plot(years_mus_scram)
-print(summary(years_mus_scram), digits = 4)
+print(summary(years_mus_scram, robust = TRUE), digits = 4)
 ```
 
 ## Null model (for plotting purposes)
@@ -309,7 +309,7 @@ years_mus <- brm(accuracy ~ yrs_mus_exp + (1|exp_subject_id), data = yrs_exp,
 
 ```{r}
 plot(years_mus)
-print(summary(years_mus), digits = 4)
+print(summary(years_mus, robust = TRUE), digits = 4)
 ```
 
 \newpage
@@ -322,7 +322,7 @@ yrs_BF <- describe_posterior(years_mus_scram,
 print(yrs_BF, digits = 4)
 ```
 
-```{r}
+```{r, include=FALSE}
 yrs_null_BF <- describe_posterior(years_mus,
                                   estimate = "median", dispersion = TRUE,
                                   ci = .95, ci_method = "HDI",
